<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.kemper.paycal.CalculatorActivity"
    android:id="@+id/activityCalculator"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/user_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/add_user_btn"
            android:text="@string/add_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            />

        <Button
            android:id="@+id/calculate_btn"
            android:text="@string/calculate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/calculate_btn"
            android:textColor="@color/colorAccent"
            android:onClick="onClickCalculate"
            />

        <Button
            android:id="@+id/goto_main_btn"
            android:text="@string/goto_main_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickGoHome"
            />

        <TableLayout
            android:id="@+id/results_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            ></TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="200dp"
            >

            <TextView
                android:id="@+id/directions_header"
                android:text="@string/directions_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="30sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/explanation"
                android:text="@string/explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/directions_step1"
                android:text="@string/directions_step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/directions_step2"
                android:text="@string/directions_step2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textSize="20sp"
                />


        </LinearLayout>

    </LinearLayout>
</ScrollView>
